# env5001

./: .gitignore  api.py  interface.py  methodologie.md  methodologie2.md  pyproject.toml  readme.md  result.md  traitement.py
config/: config.yaml  config_model.yaml
data/: 2025-FluidTopics-daily-analytics.yaml
